--- a/Launcher/Launcher/Views/LoginView.xaml
+++ b/Launcher/Launcher/Views/LoginView.xaml
@@ -43,9 +43,9 @@
                 <TextBlock Grid.Column="1" Grid.Row="2" Text="1ый раз? Тогда " VerticalAlignment="Top" FontSize="20" HorizontalAlignment="Center"/>
                 <Button x:Name="Register" Grid.Column="1" Grid.Row="2" Margin="0, 30, 0, 10" Content="Зарегистрируйся!" FontSize="20"></Button>
                 <Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom"/>
-                <TextBox x:Name="PersonalNumber" Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табельный номер" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="PersonalNumber" Margin="0,10" Grid.Row="3" Grid.Column="1" controls:TextboxHelper.Watermark="Табельный номер" VerticalContentAlignment="Center" SelectionChanged="Password_SelectionChanged" MouseLeave="PersonalNumber_OnMouseEnter"/>
                 <!--TODO PasswordBox -->
-                <TextBox x:Name="Password" Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="Password" Margin="0,10" Grid.Row="4" Grid.Column="1" controls:TextboxHelper.Watermark="Пароль" VerticalContentAlignment="Center" SelectionChanged="Password_SelectionChanged"/>
                 <CheckBox x:Name="RememberMe" Grid.Row="5" Grid.Column="1" Content="Запомнить?" VerticalContentAlignment="Center" FontSize="20" Foreground="#66CC66" HorizontalAlignment="Left"></CheckBox>
                 <Button x:Name="Login" Grid.Row="6" Grid.Column="1" Content="Войти" Background="#66CC66" Foreground="White" FontSize="24"></Button>
             </Grid>
