--- a/Launcher/Launcher/Views/ShellView.xaml
+++ b/Launcher/Launcher/Views/ShellView.xaml
@@ -12,7 +12,8 @@
                       d:DesignHeight="300" d:DesignWidth="300" WindowStyle="None" WindowState="Maximized"
                       WindowStartupLocation="CenterScreen" WindowTransitionsEnabled="false"
                       ResizeMode="CanResizeWithGrip" MinHeight="{DynamicResource {x:Static SystemParameters.WorkArea}}"
-                      MinWidth="{DynamicResource {x:Static SystemParameters.WorkArea}}">
+                      MinWidth="{DynamicResource {x:Static SystemParameters.WorkArea}}"
+                      cal:Message.Attach="[Event Closing] = [Action OnClose()]">
     <Controls:MetroWindow.Style>
         <Style>
             <Setter Property="WindowChrome.WindowChrome">
