--- a/Launcher/Launcher.Core/Components/Document/DocumentView.xaml
+++ b/Launcher/Launcher.Core/Components/Document/DocumentView.xaml
@@ -1,14 +1,11 @@
-﻿<Window
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:cal="http://www.caliburnproject.org"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    mc:Ignorable="d"
-    x:Class="Launcher.Module.Document.Views.DocumentView"
-    ResizeMode="NoResize" WindowStyle="None" WindowState="Maximized"
-    d:DesignWidth="470" d:DesignHeight="303">
+﻿<Window x:Class="Launcher.Core.Components.Document.DocumentView"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        ResizeMode="NoResize" WindowStyle="None" WindowState="Maximized"
+        d:DesignWidth="470" d:DesignHeight="303">
 
     <Window.Resources>
         <MatrixTransform x:Key="InitialMatrixTransform">
@@ -28,10 +25,10 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" cal:Message.Attach="[Event MouseDown] = [Action CloseWindow]"
+        <StackPanel Grid.Column="0" Grid.Row="0" MouseDown="Close"
                     Background="Red">
             <Canvas>
-                <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0" />
+                <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0"  />
             </Canvas>
         </StackPanel>
         <Label Grid.Column="1" Grid.Row="0" Content="{Binding Address, ElementName=WebBrowser}" />
