--- a/Launcher/Launcher.Module.Developed/DevelopedModuleView.xaml
+++ b/Launcher/Launcher.Module.Developed/DevelopedModuleView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.Module.Document.Views.DevelopedModuleView"
+﻿<UserControl x:Class="Launcher.Module.Developed.DevelopedModuleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
